syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";
import "google/protobuf/empty.proto";

message GetProductsRequestDto{
	google.protobuf.Empty input=1;
}

message ProductDto{
	int32 id=1;
	string name=2;
}

service ProductsService{
	rpc GetAllProducts(GetProductsRequestDto) returns (stream ProductDto);
}